# herbert2

./: .gitignore  .gitmodules  README.md
src/herbert2/: CMakeLists.txt  package.xml
src/herbert2_bringup/: CMakeLists.txt  package.xml
src/herbert2_bringup/launch/: robot_launch.py  rviz2_launch.py
src/herbert2_cartographer/: CMakeLists.txt  package.xml
src/herbert2_cartographer/config/: herbert2_config.lua
src/herbert2_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
src/herbert2_cartographer/rviz/: herbert2_cartographer.rviz
src/herbert2_description/: CMakeLists.txt  package.xml
src/herbert2_description/launch/: rviz2_launch.py.bak
src/herbert2_description/rviz/: herbert2_robot.rviz
src/herbert2_description/urdf/: herbert2_robot.urdf
src/herbert2_example/: package.xml  setup.cfg  setup.py
src/herbert2_example/herbert2_example/: __init__.py
src/herbert2_example/herbert2_example/herbert2_obstacle_detection/: __init__.py  main.py  obstacle_detection_node.py
src/herbert2_example/herbert2_example/herbert2_position_control/: herbert2_path.py  herbert2_position_control.py  main.py
src/herbert2_example/herbert2_example/herbert2_rotation_control/: main.py  rotation_control.py
src/herbert2_example/herbert2_example/herbert2_trajectory_control/: main.py  trajectory_control_keyboard.py  trajectory_control_node.py
src/herbert2_example/launch/: obstacle_detection_example_launch.py
src/herbert2_geometry/: __init__.py  package.xml  setup.cfg  setup.py
src/herbert2_geometry/herbert2_geometry/: __init__.py  quaternion.py  robot_maths.py
src/herbert2_imu/: package.xml  setup.cfg  setup.py
src/herbert2_imu/firmware/teensy/imu_firmware/: imu_firmware.ino
src/herbert2_imu/herbert2_imu/: imu_driver.py  imu_driver_node.py
src/herbert2_launch/: CMakeLists.txt  package.xml
src/herbert2_launch/launch/: navigation_sensor_launch.py  odrive_motor_launch.py  robot_state_publisher_launch.py
src/herbert2_odometry/: package.xml  setup.cfg  setup.py
src/herbert2_odometry/herbert2_odometry/: kinematics.py  odometry.py  odometry_logger.py  odometry_logger_node.py  odometry_node.py  odometry_publisher.py  odometry_publisher_node.py
src/herbert2_odrive_interfaces/: CMakeLists.txt  package.xml
src/herbert2_odrive_interfaces/msg/: ODriveMsg.msg
src/herbert2_odrive_interfaces/srv/: CalibrateODriveService.srv
src/herbert2_robot/: package.xml  setup.cfg  setup.py
src/herbert2_robot/herbert2_robot/: __init__.py  main.py
src/herbert2_robot/herbert2_robot/depricated/: diff_odrive_controller.py.dep  odrive_driver_node.py.dep  odrive_math.py.dep
src/herbert2_robot/herbert2_robot/script/: __init__.py  calibration_service.py  herbert2_robot.py  motor_controller.py  motor_driver.py  node_decorator.py  odrive_driver.py  odrive_errors.py  service.py  trajectory.py  trajectory_controller.py  trajectory_planer.py  velocity_controller.py
src/herbert2_robot/herbert2_robot/script/sensors/: __init__.py  imu_sensor.py.depricated  joint_sensor.py  sensor.py
src/herbert2_robot/param/: robot_params.yaml
src/herbert2_robot/scripts/: 91-herbert2-odrive.rules  create_udev_rules.sh
src/herbert2_rplidar/: CMakeLists.txt  package.xml
src/herbert2_rplidar/config/: rplidar_params.yaml
src/herbert2_rplidar/include/rplidar_ros/: laser_scan_publisher.hpp  laser_scan_subscriber.hpp
src/herbert2_rplidar/launch/: rplidar_launch.py
src/herbert2_rplidar/scripts/: create_udev_rules.sh
src/herbert2_rplidar/src/: client.cpp  driver.cpp  laser_scan_publisher.cpp  laser_scan_subscriber.cpp
src/herbert2_teleop/: package.xml  setup.cfg  setup.py
src/herbert2_teleop/herbert2_teleop/script/: teleop_keyboard.py
src/python_stuff/: python_trajectory_example.py  trajection.py
