<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>herbert2</name>
  <version>2.0.0</version>
  <description>
    ROS 2 packages for Hebert
  </description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>herbert2_serial</exec_depend>
  <exec_depend>herbert2_odrive</exec_depend>
  <exec_depend>herbert2_bringup</exec_depend>
  <exec_depend>herbert2_interfaces</exec_depend>
  <exec_depend>herbert2_teleop</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>