<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>herbert2_bringup</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="herbert@todo.todo">herbert</maintainer>
    <license>TODO: License declaration</license>


    <depend>rclpy</depend>
    <depend>xacro</depend>


  <buildtool_depend>ament_cmake</buildtool_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
