<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>herbert2_cartographer</name>
  <version>0.0.1</version>
  <description>
    ROS 2 launch scripts for herbert2 cartographer
  </description>
  <license>Apache 2.0</license>

  <maintainer email="tim.kingsmill@gmail.com">Tim Kingsmill</maintainer>
  <author email="tim.kingsmill@gmail.com">Tim Kingsmill</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
