<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
 
    <name>herbert2_description</name>
    <version>2.1.2</version>
    <description>
        3D models of the herbert2 robot for simulation and visualization
    </description>
    <license>Apache 2.0</license>

    <author email="tim.kingsmill@gmail.com">Tim Kingsmill</author>
    <maintainer email="tim.kingsmill@gmail.com">Tim Kingsmill</maintainer>

    <buildtool_depend>ament_cmake</buildtool_depend>
  
    <depend>rviz2</depend>
    <depend>xacro</depend>
    <depend>urdf</depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
