<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>herbert2_launch</name>
    <version>0.0.0</version>
    <description>Herbert2 Launch Package</description>
    <maintainer email="tim.kingsmill@gmail.com">Tim Kingsmill</maintainer>
    <license>TODO: License declaration</license>


    <depend>rclpy</depend>
    <depend>xacro</depend>


  <buildtool_depend>ament_cmake</buildtool_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
