<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>herbert2_robot</name>
  <version>0.0.1</version>

  <description>TODO: Package description</description>
  <maintainer email="tim.kingsmill@gmail.com">herbert</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>ros2_lidar_driver_py</depend>
  <depend>herbert2_odrive_interfaces</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
